corrected definition of a face

--- a/session1.tex
+++ b/session1.tex
@@ -173,7 +173,7 @@ The category of simplicial sets is then defined as $\sSet = \Fun(\Delta^{\op}, \
 Let $\Delta^n = \Hom(-, [n]) \in \sSet$ be the representable \emph{$n$-simplex}.
 Then by Yoneda, an element of $X_n$ is equivalently a morphism of simplicial sets $\Delta^n \to X$.
 
-The boundary $\partial \Delta^n \hookrightarrow \Delta^n$ is defined as the union of the faces $\partial^k \Delta^n$, images of $(\delta_n^k)^*$.
+The boundary $\partial \Delta^n \hookrightarrow \Delta^n$ is defined as the union of the faces $\partial^k \Delta^n$, images of $\delta_n^k \circ -$.
 
 For every $k \leqslant n$, define the \emph{$k$-th horn} $\Lambda_k^n \subset \Delta^n$ to be the union of all the $(n-1)$-faces except the $k$-th one :
 \[
