--- a/session1.tex
+++ b/session1.tex
@@ -6,11 +6,11 @@
 \usepackage{enumitem}
 \usepackage{csquotes}
 
-\newtheorem{theorem}{Theorem}
+\newtheorem{theorem}{Theorem}[section]
 \theoremstyle{definition}
-\newtheorem{definition}{Definition}
-\newtheorem{remark}{Remark}
-\newtheorem{example}{Example}
+\newtheorem{definition}[theorem]{Definition}
+\newtheorem{remark}[theorem]{Remark}
+\newtheorem{example}[theorem]{Example}
 
 \newcommand{\A}{\mathbf{A}}
 \newcommand{\C}{\mathcal{C}}
